--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="TemplateMo">
 
-        <title>Awais Companies Portfolio </title>
+        <title>lineScript.com</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
